# chargeback-api/internal/interfaces/http/handlers/chargeback-opened-handler.go
@@ -24,12 +24,13 @@ func NewChargebackOpenedHandler(chargebackOpenedUseCase *usecases.ChargebackOpen
 
 // CreateChargeback godoc
 // @Summary Open a chargeback for user and transaction
-// @Description Verify if the chargeback exists using idempotency with user id and transaction id. Case not exists send a message to the RabbitMQ for create a new chargeback in the processor.
+// @Description Verify if the chargeback exists using idempotency with user ID and transaction ID.<br><br>- **If it does not exist:** Sends a message to the queue (`chargeback-opened`) to create a new chargeback in the processor. <br><br>- **Returns:** <br><br>`202 Accepted` <br><br>`"message": "Chargeback sent to processor successfully"` <br><br><br>- **If it already exists:** <br><br>- **Returns:** <br><br>`200 OK` <br><br>`"message": "Chargeback already exists"`
 // @Tags chargeback
 // @Accept json
 // @Produce json
 // @Param chargeback body dto.ChargebackRequest true "Data of the chargeback"
 // @Success 202 {object} presentation.JSONResponse
+// @Success 200 {object} presentation.JSONResponse
 // @Failure 400 {object} presentation.JSONResponse
 // @Failure 500 {object} presentation.JSONResponse
 // @Router /v1/chargebacks [post]
